Tag: tags/2017-07-11-02
--------------------
- p-209: Added title alignment fields to cvl and cvl context

Tag: tags/2017-07-11-01
--------------------
- Updated css for show and new view modes

Tag: tags/2017-07-11
--------------------
- Commented out show field bases from cmb_field_bases for now. Conflicts need to be resolved first.

Tag: tags/2017-06-25
--------------------
- updates for show content type code and features

Tag: tags/2017-06-24
--------------------
- added option to sort by production date on latest shows carousel

Tag: tags/2017-06-12
--------------------
- p-188: ReUsing Jumbotron Items, added published field to jumbotron items

Tag: tags/2017-06-11-0
--------------------
- p-186: Homepage Paragraphs—Any Paragraph

Tag: tags/2017-06-11
--------------------
- p-139: Updated jumbotron to include a toggle for display of CTA button

Tag: tags/2017-05-31
--------------------
- updated cmb_cb_shows_in_series to use proper wrapper code for getting show thumbnail
- added new font icons for skype and google plus
- moved image style for cmb_blog_jumbotron to cmb_blog module

Tag: tags/2017-05-24
--------------------
- p-155: Extra white space on sidebar

Tag: tags/2017-05-21
--------------------
- p-176: Increase point size for Log In and Menu on mobile

Tag: tags/2017-05-14
--------------------
- p-153: Partner Page Block Videos not Updating

Tag: tags/2017-05-13
--------------------
- p-169: Full Width edge to edge mode on Image paragraph type
- p-160: Add link option to “Image” Paragraph and “Text and Image” Paragraph
- p-164: Jumbotron not automatically advancing

Tag: tags/2017-03-30
---------------------
- p-86: Producers carousel

Tag: tags/2017-03-26
---------------------
- p-139: Homepage Using Paragraphs
- p-141: Estimate: Jumbotron Text Treatment Modification

Tag: tags/2017-03-25-0
---------------------
- p-114: Creating Slide Show Feature clean-up

Tag: tags/2017-03-25
---------------------
- p-114: Creating Slide Show Feature
