@@ -54,6 +54,8 @@ function cmb_landing_page_features_field_default_field_instances() {
         'cmb_block_reference' => 'cmb_block_reference',
         'cmb_jumbotron' => 'cmb_jumbotron',
         'cmb_jumbotron_item' => -1,
+        'cmb_video' => 'cmb_video',
+        'cmb_video_grid' => 'cmb_video_grid',
         'content_list' => 'content_list',
         'content_list_item' => -1,
         'custom_video_list' => 'custom_video_list',
@@ -69,16 +71,18 @@ function cmb_landing_page_features_field_default_field_instances() {
         'cmb_block_reference' => 2,
         'cmb_jumbotron' => 3,
         'cmb_jumbotron_item' => 4,
-        'content_list' => 5,
-        'content_list_item' => 6,
+        'cmb_video' => 13,
+        'cmb_video_grid' => -12,
+        'content_list' => 15,
+        'content_list_item' => 16,
         'custom_video_list' => 7,
         'custom_video_list_context' => 8,
-        'image' => 9,
-        'slider' => 10,
-        'slider_item' => 11,
-        'text' => 12,
-        'text_and_image' => 13,
-        'text_with_background' => 14,
+        'image' => 19,
+        'slider' => 20,
+        'slider_item' => 21,
+        'text' => 22,
+        'text_and_image' => 23,
+        'text_with_background' => 24,
       ),
       'default_edit_mode' => 'open',
       'title' => 'Paragraph',
