@@ -1,0 +1,8 @@
+name = CMB Video Grid
+description = CMB Video Grid
+package = CM Bootstrap: Content Components
+core = 7.x
+dependencies[] = paragraphs
+dependencies[] = cmb_video_grid_features
+dependencies[] = cc_helper
+dependencies[] = flexloader
