@@ -1,0 +1,91 @@
+<?php
+
+// Require Helpers
+require_once(drupal_get_path('module', 'cc_helper') . '/lib/ImageHelper.php');
+require_once(drupal_get_path('module', 'cc_helper') . '/lib/FieldHelper.php');
+require_once(drupal_get_path('module', 'cc_helper') . '/lib/ColorHelper.php');
+require_once(drupal_get_path('module', 'cc_helper') . '/lib/ParagraphHelper.php');
+require_once(drupal_get_path('module', 'cc_helper') . '/lib/LinkHelper.php');
+
+/**
+ * Implements hook_theme($existing, $type, $theme, $path).
+ */
+function cmb_video_grid_theme($existing, $type, $theme, $path) {
+  $theme = array();
+
+  $theme['paragraphs_item__cmb_video_grid'] = array(
+    'template' => 'paragraphs-item--cmb_video_grid',
+    'path' => drupal_get_path('module', 'cmb_video_grid') . '/templates',
+  );
+
+  // Paragraphs editor preview
+  $theme['paragraphs_item__cmb_video_grid__paragraphs_editor_preview'] = array(
+    'template' => 'paragraphs-item--cmb_video_grid--paragraphs_editor_preview',
+    'path' => drupal_get_path('module', 'cmb_video_grid') . '/templates',
+  );
+
+  return $theme;
+}
+
+/**
+ * Implements hook_preprocess_entity(&$variables).
+ */
+function cmb_video_grid_preprocess_entity(&$variables) {
+	if ($variables['entity_type'] == 'paragraphs_item' && $variables['elements']['#bundle'] == 'cmb_video_grid') {
+  	$paragraph = $variables['paragraphs_item'];
+
+  	switch($variables['view_mode']) {
+      case 'paragraphs_editor_preview':
+        $data = [
+          'id' => $paragraph->item_id,
+        ];
+        break;
+
+      case 'full':
+        // Attach css
+        drupal_add_css(drupal_get_path('module', 'cmb_video_grid') . '/css/cmb_video_grid.css');
+
+        // Attach Flexloader
+        // libraries_load('flexloader');
+
+        // Attach JS
+        //drupal_add_js(drupal_get_path('module', 'cmb_video_grid') . '/js/cmb_video_grid.js');
+
+        foreach($paragraph->field_cc_cmbvg_items[LANGUAGE_NONE] as $video_grid_item) {
+          $video_grid_target_ids[] = $video_grid_item['target_id'];
+        }
+
+        $vg_nodes = entity_load('node', $video_grid_target_ids);
+
+        foreach($vg_nodes as $vg_node) {
+          $shows = array();
+
+          foreach($vg_node->field_column_1_shows[LANGUAGE_NONE] as $show) {
+            $shows[] = node_load($show['target_id']);
+          }
+
+          if (isset($vg_node->field_column_1_description[LANGUAGE_NONE][0]['value'])) {
+            $description = $vg_node->field_column_1_description[LANGUAGE_NONE][0]['value'];
+          }
+          else {
+            $description = '';
+          }
+
+          $items[$vg_node->nid] = array(
+            'title' => $vg_node->title,
+            'description' => $description,
+            'shows' => $shows,
+          );
+        }
+
+
+        $data = [
+          'id' => $paragraph->item_id,
+          'items' => $items,
+        ];
+        break;
+  	}
+
+    $variables['cmb_video_grid'] = $data;
+  }
+}
