@@ -1,0 +1,58 @@
+<?php
+/**
+ * @file
+ * cmb_video_grid_features.features.field_instance.inc
+ */
+
+/**
+ * Implements hook_field_default_field_instances().
+ */
+function cmb_video_grid_features_field_default_field_instances() {
+  $field_instances = array();
+
+  // Exported field_instance:
+  // 'paragraphs_item-cmb_video_grid-field_cc_cmbvg_items'.
+  $field_instances['paragraphs_item-cmb_video_grid-field_cc_cmbvg_items'] = array(
+    'bundle' => 'cmb_video_grid',
+    'default_value' => NULL,
+    'deleted' => 0,
+    'description' => '',
+    'display' => array(
+      'default' => array(
+        'label' => 'above',
+        'module' => 'entityreference',
+        'settings' => array(
+          'link' => FALSE,
+        ),
+        'type' => 'entityreference_label',
+        'weight' => 0,
+      ),
+      'paragraphs_editor_preview' => array(
+        'label' => 'above',
+        'settings' => array(),
+        'type' => 'hidden',
+        'weight' => 0,
+      ),
+    ),
+    'entity_type' => 'paragraphs_item',
+    'field_name' => 'field_cc_cmbvg_items',
+    'label' => 'Video Grid',
+    'required' => 0,
+    'settings' => array(
+      'user_register_form' => FALSE,
+    ),
+    'widget' => array(
+      'active' => 1,
+      'module' => 'options',
+      'settings' => array(),
+      'type' => 'options_buttons',
+      'weight' => 0,
+    ),
+  );
+
+  // Translatables
+  // Included for use with string extractors like potx.
+  t('Video Grid');
+
+  return $field_instances;
+}
