@@ -1,0 +1,7 @@
+<?php
+/**
+ * @file
+ * Code for the CMB Video Grid Features feature.
+ */
+
+include_once 'cmb_video_grid_features.features.inc';
