@@ -1,0 +1,9 @@
+@media screen {
+  .cc-cmb-video-grid {
+  }
+}
+
+@media screen and (min-width: 767px) {
+  .cc-cmb-video-grid {
+  }
+}
