@@ -4,3 +4,4 @@ package = Content Components
 core = 7.x
 
 dependencies[] = paragraphs
+dependencies[] = content_components_features
