@@ -5,3 +5,4 @@ core = 7.x
 
 dependencies[] = paragraphs
 dependencies[] = content_components
+dependencies[] = cc_text_and_image_features
